--- a/2/in_lab/w2_in_lab.vcxproj.filters
+++ b/2/in_lab/w2_in_lab.vcxproj.filters
@@ -15,21 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Text.cpp">
+    <ClCompile Include="w2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Timekeeper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="w2.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Text.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="TimeKeeper.h">
+    <ClInclude Include="Timekeeper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
