--- a/WS03/in_lab/in_lab.vcxproj
+++ b/WS03/in_lab/in_lab.vcxproj
@@ -139,13 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="LVPair.h" />
-  </ItemGroup>
-  <ItemGroup>
     <Text Include="Sales.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="w3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="List.h" />
+    <ClInclude Include="LVPair.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
