--- a/WS04/in_lab/in_lab.vcxproj.filters
+++ b/WS04/in_lab/in_lab.vcxproj.filters
@@ -18,8 +18,16 @@
     <ClCompile Include="w4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Message.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="w4_test.dat" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Message.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
